fixed boundries bug, fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,4 @@
-/* .spacing{
-  margin-bottom:300px;
-} */
-
 .Content{
-  margin: 0;
   color: #f1f1ef;
   background: #151516;
 }
