--- a/src/Components/Introduction/intro.css
+++ b/src/Components/Introduction/intro.css
@@ -67,8 +67,8 @@
 
 .i-img{
     top: 60px;
-    height: 400px;
-    width: 400px;
+    height:20vw;
+    width: 20vw;
     clip-path: circle(50% at 50% 50%);
     position: relative;
 }
